[gd_scene load_steps=19 format=2]

[ext_resource path="res://shaders/transition.gdshader" type="Shader" id=1]
[ext_resource path="res://fonts/font_display_new.tres" type="DynamicFont" id=2]
[ext_resource path="res://theme_main.tres" type="Theme" id=3]
[ext_resource path="res://scripts/scenes/lobby.gd" type="Script" id=4]
[ext_resource path="res://audio/music/funky-puzzler.ogg" type="AudioStream" id=5]
[ext_resource path="res://shaders/vignette.gdshader" type="Shader" id=6]
[ext_resource path="res://fonts/font_display_new_l.tres" type="DynamicFont" id=7]
[ext_resource path="res://textures/transition_swirl.png" type="Texture" id=8]
[ext_resource path="res://fonts/font_display_new_s.tres" type="DynamicFont" id=9]
[ext_resource path="res://prefabs/cc_button.tscn" type="PackedScene" id=10]
[ext_resource path="res://audio/sound/whoosh.ogg" type="AudioStream" id=11]
[ext_resource path="res://audio/sound/whoosh2.ogg" type="AudioStream" id=12]
[ext_resource path="res://audio/sound/ding2.ogg" type="AudioStream" id=13]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/color = Color( 0.0156863, 0, 0.0941176, 1 )

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 1 )
shader_param/cutoff = 1.0
shader_param/mask = ExtResource( 8 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Transition:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "init"
tracks/0/type = "value"
tracks/0/path = NodePath("Transition:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "transition"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Transition:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
title_scene = "res://scenes/title.tscn"
game_scene = "res://scenes/game.tscn"

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0716858, 0.210938, 0.176125, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Decorations" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Vignette" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LabelLobby" type="RichTextLabel" parent="."]
margin_left = 848.0
margin_top = 32.0
margin_right = 1264.0
margin_bottom = 184.0
custom_colors/default_color = Color( 0.917647, 0.839216, 0.572549, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][tornado radius=5]Lobby[/tornado][/center]"
meta_underlined = false
text = "Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="GridContainer" parent="."]
margin_left = 160.0
margin_top = 128.0
margin_right = 504.0
margin_bottom = 512.0
custom_constants/vseparation = 30
custom_constants/hseparation = 30
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPlayers" type="Label" parent="."]
margin_left = 96.0
margin_top = 56.0
margin_right = 512.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 7 )
text = "Players"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelSettings" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -440.0
margin_top = -304.0
margin_right = -24.0
margin_bottom = -222.0
custom_fonts/font = ExtResource( 7 )
text = "Game Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStart" parent="." instance=ExtResource( 10 )]
margin_left = 480.0
margin_top = 536.0
margin_right = 800.0
margin_bottom = 608.0
text = "Start Game"

[node name="Settings" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -424.0
margin_top = -224.0
margin_right = -9.0
margin_bottom = -56.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Settings"]
margin_right = 415.0
margin_bottom = 41.0
custom_constants/separation = 20

[node name="LabelTimeLimit" type="Label" parent="Settings/HBoxContainer"]
margin_right = 157.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 9 )
text = "Time Limit"

[node name="SpinBoxTime" type="SpinBox" parent="Settings/HBoxContainer"]
margin_left = 177.0
margin_right = 415.0
margin_bottom = 41.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
min_value = 10.0
max_value = 300.0
value = 60.0
align = 1
suffix = "sec"

[node name="HBoxContainer2" type="HBoxContainer" parent="Settings"]
margin_top = 57.0
margin_right = 415.0
margin_bottom = 98.0
custom_constants/separation = 20

[node name="LabelWords" type="Label" parent="Settings/HBoxContainer2"]
margin_right = 254.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 9 )
text = "Peek Word Count"
align = 2

[node name="SpinBoxWords" type="SpinBox" parent="Settings/HBoxContainer2"]
margin_left = 274.0
margin_right = 415.0
margin_bottom = 41.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
min_value = 1.0
max_value = 500.0
value = 10.0
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Settings"]
margin_top = 114.0
margin_right = 415.0
margin_bottom = 155.0
custom_constants/separation = 20

[node name="LabelTheme" type="Label" parent="Settings/HBoxContainer3"]
margin_right = 319.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 9 )
text = "Show Random Theme"

[node name="CheckButtonTheme" type="CheckButton" parent="Settings/HBoxContainer3"]
margin_left = 339.0
margin_right = 405.0
margin_bottom = 41.0
theme = ExtResource( 3 )

[node name="SettingsBlocker" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -448.0
margin_top = -336.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ButtonExit" parent="." instance=ExtResource( 10 )]
margin_left = 24.0
margin_top = 32.0
margin_right = 128.0
margin_bottom = 112.0
is_small = true

[node name="Polygon2D2" parent="ButtonExit" index="0"]
polygon = PoolVector2Array( 16, 15.1111, 72, 8, 104, 43.5556, 80, 79.1111, 16, 79.1111, -8, 50.6667 )

[node name="Polygon2D" parent="ButtonExit" index="1"]
position = Vector2( -120, -9 )
polygon = PoolVector2Array( 144, 15.1111, 200, 8, 232, 43.5556, 208, 79.1111, 144, 79.1111, 120, 50.6667 )

[node name="Arrow" type="Polygon2D" parent="ButtonExit"]
position = Vector2( 10, 2 )
antialiased = true
polygon = PoolVector2Array( 40, 16, 16, 40, 40, 64, 40, 48, 70, 46, 70, 30, 40, 32 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -12.0
bus = "Music"

[node name="ClickBlock" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Transition" type="ColorRect" parent="."]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/init = SubResource( 10 )
anims/transition = SubResource( 8 )

[node name="SoundStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -5.0

[node name="SoundTransition" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="SoundTransition2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -2.0

[node name="TimerConnectTimeout" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TimerAddMe" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="TimerTransition" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="TimerTitle" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="TimerStart" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="TimerStart2" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="pressed" from="ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="value_changed" from="Settings/HBoxContainer/SpinBoxTime" to="." method="_on_SpinBoxTime_value_changed"]
[connection signal="value_changed" from="Settings/HBoxContainer2/SpinBoxWords" to="." method="_on_SpinBoxWords_value_changed"]
[connection signal="toggled" from="Settings/HBoxContainer3/CheckButtonTheme" to="." method="_on_CheckButtonTheme_toggled"]
[connection signal="pressed" from="ButtonExit" to="." method="_on_ButtonExit_pressed"]
[connection signal="timeout" from="TimerConnectTimeout" to="." method="_on_TimerConnectTimeout_timeout"]
[connection signal="timeout" from="TimerAddMe" to="." method="_on_TimerAddMe_timeout"]
[connection signal="timeout" from="TimerTransition" to="." method="_on_TimerTransition_timeout"]
[connection signal="timeout" from="TimerTitle" to="." method="_on_TimerTitle_timeout"]
[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]
[connection signal="timeout" from="TimerStart2" to="." method="_on_TimerStart2_timeout"]

[editable path="ButtonExit"]
